[gd_scene load_steps=4 format=3 uid="uid://8cwdmqt43udk"]

[ext_resource type="Script" path="res://GDScripts/Timer-Sched/sched_edit.gd" id="1_lxd3f"]
[ext_resource type="FontFile" uid="uid://blcvqf1n1utnc" path="res://Assets/Fonts/times new roman.ttf" id="2_tyfu0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d0ek8"]
bg_color = Color(0.339, 0.339, 0.339, 0.2)

[node name="Sched" type="Control"]
layout_mode = 3
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lxd3f")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 70

[node name="Label" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(264, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tyfu0")
theme_override_font_sizes/font_size = 20
text = "Aircon
"
horizontal_alignment = 1

[node name="Panel" type="Panel" parent="HBoxContainer/Label"]
custom_minimum_size = Vector2(165, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d0ek8")

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 12)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tyfu0")
alignment = 1

[node name="Label2" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tyfu0")
theme_override_font_sizes/font_size = 20
text = ":
"
horizontal_alignment = 1

[node name="LineEdit2" type="LineEdit" parent="HBoxContainer"]
custom_minimum_size = Vector2(100, 12)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tyfu0")
alignment = 1

[node name="VSeparator2" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="Button" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 12)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_tyfu0")
text = "On"

[connection signal="focus_entered" from="HBoxContainer/LineEdit" to="." method="_on_line_edit_focus_entered"]
[connection signal="text_changed" from="HBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="text_submitted" from="HBoxContainer/LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="focus_entered" from="HBoxContainer/LineEdit2" to="." method="_on_line_edit_2_focus_entered"]
[connection signal="text_changed" from="HBoxContainer/LineEdit2" to="." method="_on_line_edit_2_text_changed"]
[connection signal="text_submitted" from="HBoxContainer/LineEdit2" to="." method="_on_line_edit_2_text_submitted"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
